Fix: syntax and spelling errors in foundational 01: color and spacing after font-size

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,9 +1,7 @@
-/* styles.css */
-
 div {
   background-color: red;
   color: white;
-  font-size: 35px;
+  font-size: 32px;
   text-align: center;
   font-weight: bold;
 }
